# yeeroot

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build.sh
bootnodes-router/: Cargo.toml
bootnodes-router/src/: client.rs  lib.rs  params.rs
cli/: Cargo.toml
cli/src/: chain_revert.rs  chain_spec.rs  custom_command.rs  custom_param.rs  dev_param.rs  lib.rs  service.rs
cli/src/service/: foreign.rs  restarter.rs
consensus/pow/: Cargo.toml
consensus/pow/primitives/: Cargo.toml
consensus/pow/src/: digest.rs  lib.rs  pow.rs  verifier.rs
core/cli/src/: net.rs  switch.rs
core/consensus/pow/: Cargo.toml
core/consensus/pow/primitives/: Cargo.toml
core/consensus/pow/primitives/src/: lib.rs
core/consensus/pow/src/: big_array.rs  builder.rs  digest.rs  extra_data.rs  fork.rs  job.rs  lib.rs  pow.rs  verifier.rs  worker.rs
core/context/: Cargo.toml
core/context/src/: lib.rs
core/crfg/: Cargo.toml
core/crfg/primitives/: Cargo.toml
core/crfg/primitives/src/: lib.rs
core/crfg/src/: authorities.rs  aux_schema.rs  communication.rs  consensus_changes.rs  digest.rs  environment.rs  finality_proof.rs  import.rs  justification.rs  lib.rs  service_integration.rs  skip.rs  tests.rs  until_imported.rs
core/finality-grandpa/src/: lib.rs  voter.rs
core/finality-tracker/: Cargo.toml
core/finality-tracker/src/: lib.rs
core/merkle/: Cargo.toml
core/merkle/src/: lib.rs
core/primitives/: Cargo.toml
core/primitives/src/: lib.rs
core/relay-proof/: Cargo.toml
core/relay-proof/src/: lib.rs
core/service/: Cargo.toml
core/service/src/: lib.rs
core/sharding/: Cargo.toml
core/sharding/primitives/: Cargo.toml
core/sharding/primitives/src/: lib.rs  utils.rs
core/sharding/src/: identify_specialization.rs  lib.rs
core/sr-primitives/: Cargo.toml
core/sr-primitives/src/: lib.rs
core/util/: Cargo.toml
core/util/fork-tree/: Cargo.toml
core/util/merkle/: Cargo.toml
core/util/merkle/src/: lib.rs
core/util/src/: lib.rs  relay_decode.rs
dev/: Cargo.toml
dev/src/: error.rs  lib.rs
foreign/chain/: Cargo.toml
foreign/chain/interface/: Cargo.toml
foreign/chain/interface/src/: foreign_chains.rs  lib.rs
foreign/chain/src/: components.rs  lib.rs
foreign/network/: Cargo.toml
foreign/network-libp2p/: Cargo.toml
foreign/network-libp2p/src/: behaviour.rs  config.rs  identify_specialization.rs  lib.rs  peerset.rs  service_task.rs  transport.rs
foreign/network-libp2p/src/custom_proto/: behaviour.rs  handler.rs  mod.rs  upgrade.rs
foreign/network/src/: chain.rs  config.rs  error.rs  identify_specialization.rs  lib.rs  message.rs  protocol.rs  service.rs  util.rs  vprotocol.rs
foreign/network/src/test/: mod.rs
foreign/network/vnetwork/: Cargo.toml
foreign/network/vnetwork/src/: lib.rs  service.rs
foreign/relay/: Cargo.toml
foreign/relay/src/: lib.rs
foreign/vnetwork/: Cargo.toml
foreign/vnetwork/src/: config.rs  lib.rs  service.rs  vnetwork_provider.rs
prebuilt/yee_runtime/: mainnet.wasm  poc_testnet.wasm  pocnet.wasm  testnet.wasm
prebuilt/yee_runtime/upgrade/: mainnet_v5.wasm
rpc/: Cargo.toml
rpc/serde-hex/: Cargo.toml
rpc/serde-hex/src/: lib.rs
rpc/src/: errors.rs  lib.rs
rpc/src/mining/: mod.rs  primitives.rs  serde_hex.rs
rpc/src/misc/: mod.rs
rpc/src/other/: mod.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  sharding.rs
runtime/src/yee/: executive.rs  header.rs  mod.rs  pow.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
sharding/: Cargo.toml
sharding/primitives/: Cargo.toml
sharding/primitives/src/: lib.rs  utils.rs
sharding/src/: lib.rs  utils.rs
src/: chain_spec.rs  cli.rs  custom_command.rs  custom_param.rs  dev_param.rs  main.rs  service.rs
src/service/: crfg.rs  foreign.rs  foreign_demo.rs  restarter.rs  sharding.rs
srml/crfg/: Cargo.toml
srml/crfg/src/: lib.rs  mock.rs  tests.rs
srml/yee-assets/: Cargo.toml
srml/yee-assets/src/: lib.rs
srml/yee-balances/: Cargo.toml
srml/yee-balances/src/: decode.rs  lib.rs  mock.rs  tests.rs
srml/yee-crfg/: Cargo.toml
srml/yee-crfg/src/: lib.rs
srml/yee-executive/: Cargo.toml
srml/yee-executive/src/: decode.rs  lib.rs
srml/yee-pow/: Cargo.toml
srml/yee-pow/src/: lib.rs
srml/yee-relay/: Cargo.toml
srml/yee-relay-proof/: Cargo.toml
srml/yee-relay-proof/src/: lib.rs
srml/yee-relay/src/: lib.rs
srml/yee-sharding/: Cargo.toml
srml/yee-sharding/src/: lib.rs
srml/yee-storage/: Cargo.toml
srml/yee-storage/src/: lib.rs
srml/yee-sudo/: Cargo.toml
srml/yee-sudo/src/: lib.rs
srml/yee-tracker/: Cargo.toml
srml/yee-tracker/src/: lib.rs
switch/: Cargo.toml
switch/mining/: Cargo.toml
switch/mining/src/: client.rs  config.rs  gateway.rs  job.rs  job_template.rs  lib.rs  merkle.rs  miner.rs
switch/mining/src/worker/: mod.rs  pow.rs
switch/mining/util/: Cargo.toml
switch/mining/util/jsonrpc-types/: Cargo.toml
switch/mining/util/jsonrpc-types/src/: bytes.rs  lib.rs  string.rs
switch/mining/util/lru-cache/: Cargo.toml
switch/mining/util/lru-cache/src/: heap_size.rs  heapsize.rs  lib.rs
switch/mining/util/merkle-tree/: Cargo.toml
switch/mining/util/merkle-tree/examples/: basic.rs  for_miner.rs
switch/mining/util/merkle-tree/src/: hash.rs  hash_impl.rs  lib.rs  merkle.rs  proof.rs
switch/mining/util/src/: lib.rs
switch/mining/util/stop-handler/: Cargo.toml
switch/mining/util/stop-handler/src/: lib.rs
switch/mining2/: Cargo.toml
switch/mining2/src/: error.rs  lib.rs  work_manager.rs  worker.rs
switch/relay-monitor/: Cargo.toml
switch/relay-monitor/src/: lib.rs  serde.rs  types.rs
switch/rpc/: Cargo.toml
switch/rpc-servers/: Cargo.toml
switch/rpc-servers/src/: lib.rs
switch/rpc/src/: client.rs  errors.rs  lib.rs  metadata.rs
switch/rpc/src/author/: error.rs  fetch.rs  mod.rs
switch/rpc/src/chain/: mod.rs  number.rs
switch/rpc/src/pow/: mod.rs
switch/rpc/src/state/: error.rs  mod.rs
switch/rpc/src/system/: fetch.rs  mod.rs  tests.rs
switch/src/: config.rs  error.rs  lib.rs  params.rs  relay_recommit.rs
