[package]
name = "yee"
version = "1.3.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
build = "build.rs"
edition = "2018"
license = "GPL-3.0"

[[bin]]
name = "yee"
path = "src/main.rs"

[dependencies]
error-chain = "0.12"
yee-cli = { path = "cli" }

[build-dependencies]
vergen = "3"

[workspace]
