[package]
name = "yee-rpc"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
error-chain = "0.12"
substrate-rpc-services = { package = "substrate-rpc-servers", git = "https://github.com/yeeco/substrate.git", rev = "bfebc504a56ae4d159e8cdb024b3982ea641ca8b" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", rev = "bfebc504a56ae4d159e8cdb024b3982ea641ca8b" }
substrate-service = { git = "https://github.com/yeeco/substrate.git", rev = "bfebc504a56ae4d159e8cdb024b3982ea641ca8b" }
client = { package = "substrate-client", git = "https://github.com/yeeco/substrate.git", rev = "bfebc504a56ae4d159e8cdb024b3982ea641ca8b" }
network = { package = "substrate-network", git = "https://github.com/yeeco/substrate.git", rev = "bfebc504a56ae4d159e8cdb024b3982ea641ca8b" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/yeeco/substrate.git", rev = "bfebc504a56ae4d159e8cdb024b3982ea641ca8b" }
consensus_common = { package = "substrate-consensus-common", git = "https://github.com/yeeco/substrate.git", rev = "bfebc504a56ae4d159e8cdb024b3982ea641ca8b" }
tokio = "0.1"
pubsub = { package = "jsonrpc-pubsub", version = "10.0.1" }
jsonrpc-derive = "10.0.2"
jsonrpc-core = "10.0.1"
substrate-rpc = { package = "substrate-rpc", git = "https://github.com/yeeco/substrate.git", rev = "bfebc504a56ae4d159e8cdb024b3982ea641ca8b"}
basic-authorship = { package = "substrate-basic-authorship", git = "https://github.com/yeeco/substrate.git", rev = "bfebc504a56ae4d159e8cdb024b3982ea641ca8b" }
substrate-primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", rev = "bfebc504a56ae4d159e8cdb024b3982ea641ca8b" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yee-runtime = { package = "yee-runtime", path = "../runtime" }
yee-consensus-pow = { package = "yee-consensus-pow", path = "../core/consensus/pow" }
yee-consensus-pow-primitives = { package = "yee-consensus-pow-primitives", path = "../core/consensus/pow/primitives" }
parking_lot = "0.7.1"
log = "0.4"
parity-codec = "3.5"
yee-serde-hex = { package = "yee-serde-hex", path = "serde-hex" }
yee-foreign-relay = { path = "../foreign/relay" }
yee-primitives = { path = "../core/primitives" }
yee-foreign-network = { package = "yee-foreign-network", path = "../foreign/network" }
crfg = { package = "yee-crfg", path = "../core/crfg" }
grandpa = { package = "finality-grandpa", version = "0.6.0", path = "../core/finality-grandpa", features = ["derive-codec"] }
lru = "0.6.0"
