[package]
name = "yee-runtime"
version = "1.0.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
parity-codec = { version = "3.5", default-features = false, features = ["derive"] }
assets = { package = "yee-srml-assets" , path = "../srml/yee-assets", default_features = false }
pow = { package = "yee-srml-pow", path = "../srml/yee-pow", default_features = false }
consensus-pow = { package = "yee-consensus-pow-primitives", path = "../core/consensus/pow/primitives", default_features = false }
sharding_primitives = { package = "yee-sharding-primitives", path = "../core/sharding/primitives", default_features = false }
sharding = { package = "yee-srml-sharding", path = "../srml/yee-sharding", default_features = false }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
runtime-io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
version = { package = "sr-version", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
support = { package = "srml-support", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
balances = { package = "yee-srml-balances", path = "../srml/yee-balances", default_features = false }
relay = { package = "yee-srml-relay", path = "../srml/yee-relay", default_features = false }
consensus = { package = "srml-consensus", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
executive = { package = "yee-srml-executive", path="../srml/yee-executive", default_features = false }
indices = { package = "srml-indices", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
timestamp = { package = "srml-timestamp", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
client = { package = "substrate-client", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
consensus_authorities = { package = "substrate-consensus-authorities", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "862223e167736fa1ce7532766d020c7f48802327" }
crfg = { package = "yee-srml-crfg", path = "../srml/yee-crfg", default-features = false }
finality-tracker = { package = "srml-finality-tracker", path = "../srml/yee-tracker", default_features = false }
storage = { package = "yee-srml-storage", path = "../srml/yee-storage", default-features = false }
sudo = { package = "yee-srml-sudo", path = "../srml/yee-sudo", default-features = false }

[features]
default = ["std"]
std = [
    "assets/std",
    "crfg/std",
    "finality-tracker/std",
    "sharding/std",
	"pow/std",
	"consensus-pow/std",
	"parity-codec/std",
	"runtime-primitives/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"relay/std",
	"consensus/std",
	"executive/std",
	"indices/std",
	"primitives/std",
	"system/std",
	"timestamp/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"offchain-primitives/std",
	"consensus_authorities/std",
	"sharding_primitives/std",
	"storage/std",
	"sudo/std",
]
