[package]
name = "yee-switch"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
clap = "~2.32"
structopt = "0.2"
log = "0.4"
substrate-cli = { git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }

http = { package = "jsonrpc-http-server", version = "10.0.1" }
pubsub = { package = "jsonrpc-pubsub", version = "10.0.1" }
ws = { package = "jsonrpc-ws-server", version = "10.0.1" }


app_dirs = "1.2"
jsonrpc-core = "10.0.1"
jsonrpc-derive = "10.0.2"
jsonrpc-core-client = "12.0.0"
jsonrpc-client-http = "0.5.0"
jsonrpc-client-core = "0.5.0"
toml = "0.4.5"
serde_derive = "1.0.32"
serde = "1.0.32"
serde_json = "1.0"
exit-future = "0.1"
futures = "0.1"
error-chain = "0.12"
primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
hex-literal = { version = "0.1.0", optional = true }
keyring = { package = "substrate-keyring", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
sr-primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
yee-runtime = { path = "../runtime" }
route-rpc-servers = { package = "route-rpc-servers", path = "rpc-servers" }
route-rpc = { package = "route-rpc", path = "rpc" }
#pool-graph = { package = "substrate-transaction-graph", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
tokio = "0.1.7"
transaction_pool =  { package = "substrate-transaction-pool", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
