[package]
name = "yee-switch"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
clap = "~2.32"
structopt = "0.2"
log = "0.4"
http = { package = "jsonrpc-http-server", version = "10.0.1" }
pubsub = { package = "jsonrpc-pubsub", version = "10.0.1" }
ws = { package = "jsonrpc-ws-server", version = "10.0.1" }
app_dirs = "1.2"
jsonrpc-core = "10.0.1"
jsonrpc-derive = "10.0.2"
jsonrpc-core-client = "12.0.0"
jsonrpc-client-http = "0.5.0"
jsonrpc-client-core = "0.5.0"
toml = "0.4.5"
serde_derive = "1.0.32"
serde = "1.0.32"
serde_json = "1.0"
exit-future = "0.1"
futures = "0.1"
error-chain = "0.12"
tokio = "0.1.7"
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
hex-literal = { version = "0.1.0", optional = true }
substrate-cli = { git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
substrate-primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
transaction_pool =  { package = "substrate-transaction-pool", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
yee-switch-rpc-servers = { package = "yee-switch-rpc-servers", path = "rpc-servers" }
yee-switch-rpc = { package = "yee-switch-rpc", path = "rpc" }
