[package]
name = "yee-context"
version = "0.6.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pow-primitives = { package = "yee-consensus-pow-primitives", path = "../consensus/pow/primitives" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "bfebc504a56ae4d159e8cdb024b3982ea641ca8b" }
