[package]
name = "yee-context"
version = "0.6.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pow-primitives = { package = "yee-consensus-pow-primitives", path = "../consensus/pow/primitives" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "f104225049f82d90b32a4eb2694bb38b4b28a295" }
