[package]
name = "yee-context"
version = "0.6.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pow-primitives = { package = "yee-consensus-pow-primitives", path = "../consensus/pow/primitives" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default_features = false, rev = "d4b7fa04134a91fede880d292d11eba79ce88ed0" }
